refactoring: extracted GroupBasedTechnique
* common pattern: iterate over groups and collect moves from each
* slightly reduces boiler plate in those techniques